tests/fsharp/typecheck/sigs/neg25.bsl

neg25.fs(15,23,15,31): typecheck error FS0366: No implementation was given for 'abstract member NegativeTests.Test1.ITest.Meth1 : string -> string'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(32,23,32,31): typecheck error FS0366: No implementation was given for 'abstract member NegativeTests.Test2.ITest.Meth1 : string -> string'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(64,19,64,45): typecheck error FS0366: No implementation was given for 'abstract member NegativeTestsActualRepro1.INodeWrapper.Node : NegativeTestsActualRepro1.Node'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(87,19,87,25): typecheck error FS0366: No implementation was given for 'abstract member NegativeTestsActualRepro3.IThing.Name : string'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(104,19,104,27): typecheck error FS0366: No implementation was given for 'abstract member AnotherNegativeTest.ITestSub.Meth1 : int -> int'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(126,27,126,35): typecheck error FS0366: No implementation was given for 'abstract member MissingInterfaceMemberTests.Test0.ITestSub.Meth2 : int -> int'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(126,27,126,35): typecheck error FS0366: No implementation was given for 'abstract member MissingInterfaceMemberTests.Test0.ITest.Meth1 : string -> string'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(147,27,147,35): typecheck error FS0366: No implementation was given for 'abstract member MissingInterfaceMemberTests.Test1.ITest.Meth1 : string -> string'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(171,27,171,35): typecheck error FS0366: No implementation was given for 'abstract member MissingInterfaceMemberTests.Test3.ITest.Meth1 : string -> string'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(192,23,192,45): typecheck error FS0366: No implementation was given for 'abstract member NegativeTestsActualRepro2.IEvent.Add2 : ('a -> unit) -> unit'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.

neg25.fs(211,23,211,29): typecheck error FS0366: No implementation was given for 'abstract member NegativeTestsActualRepro4.IThing.Name : string'. Note that all interface members must be implemented and listed under an appropriate 'interface' declaration, e.g. 'interface ... with member ...'.
